<resources>
    <string name="app_name">MyFirstCalculator</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="plus_text">+</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="divide_text">÷</string>
    <string name="six_text">6</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="multiply_text">X</string>
    <string name="minus_text">-</string>
    <string name="point_text">.</string>
    <string name="zero_text">0</string>
    <string name="equal_text">=</string>
    <string name="mode_text">%</string>
    <string name="clear_text">C</string>
    <string name="root_text">√</string>
    <string name="plus_minus_text">+/-</string>
    <string name="arrow_text">→</string>
</resources>
